--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 #spring.data.elasticsearch.cluster-name=elasticsearch_neftalimadariagacastro
 #spring.data.elasticsearch.cluster-node=localhost:9200
 
-server.servlet.context-path=/api/v1/delivery-service-registry
+#server.servlet.context-path=/api/v1/delivery-service-registry
 springdoc.api-docs.path=/api-docs
